[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/debugger/controls/Vector3Control.gd" type="Script" id=1]
[ext_resource path="res://addons/debugger/controls/ScalarControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/debugger/controls/BaseControl.tscn" type="PackedScene" id=3]

[node name="Vector3Control" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="Label" parent="." index="0"]
margin_top = 8.0
margin_bottom = 22.0

[node name="Layout" type="GridContainer" parent="." index="1"]
margin_left = 4.0
margin_right = 270.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
size_flags_horizontal = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScalarX" parent="Layout" index="0" instance=ExtResource( 2 )]
margin_right = 86.0

[node name="ScalarY" parent="Layout" index="1" instance=ExtResource( 2 )]
margin_left = 90.0
margin_right = 176.0
text_label = "y"

[node name="ScalarZ" parent="Layout" index="2" instance=ExtResource( 2 )]
margin_left = 180.0
margin_right = 266.0
text_label = "z"
[connection signal="value_changed" from="Layout/ScalarX" to="." method="_on_ScalarX_value_changed"]
[connection signal="value_changed" from="Layout/ScalarY" to="." method="_on_ScalarY_value_changed"]
[connection signal="value_changed" from="Layout/ScalarZ" to="." method="_on_ScalarZ_value_changed"]
